# wavy

./: Cargo.toml  macos-build.sh
Wavy.clap/Contents/: Info.plist
Wavy.clap/Contents/MacOS/: libwavy.dylib
src/: lib.rs  oscillator.rs
